# ini_parser

./: .gitignore  README.txt  astylerc.txt
original/: CMakeLists.txt  SimplyParseInC-Wayback.html  ckparser.c  ckparser.h  testparser.c
original/tests/: test_no_key.ini  test_no_sec.ini  test_stop.ini
pascal/: ini_one.ini  iniparser.pp  pasc
workthru/: CMakeLists.txt  iniparser.c  iniparser.h  testparser.c
workthru/tests/: ini_one.ini  test_embedded_blanks.ini  test_long_strings.ini  test_missing_brace.ini  test_no_key.ini  test_no_sec.ini  test_no_spaces.ini  test_no_value.ini
